# kata

./: .gitignore  .kata.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md  prd.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  publish.yml
kata/: __init__.py  __main__.py
kata/cli/: __init__.py  app.py
kata/cli/commands/: __init__.py
kata/core/: __init__.py  config.py  models.py  settings.py  templates.py
kata/services/: __init__.py  loop.py  registry.py  routine.py  sessions.py
kata/tui/: __init__.py  app.py  themes.py
kata/tui/screens/: __init__.py  context_menu.py  search.py  settings.py  wizard.py
kata/tui/widgets/: __init__.py  layout.py  preview.py  recents.py  search.py  status.py  tree.py
kata/utils/: __init__.py  detection.py  fzf.py  git.py  paths.py  scanner.py  zoxide.py
openspec/changes/add-fzf-project-switcher/: proposal.md  tasks.md
openspec/changes/add-fzf-project-switcher/specs/project-switching/: spec.md
openspec/changes/add-kata-workspace-orchestrator/: design.md  proposal.md  tasks.md
openspec/changes/add-kata-workspace-orchestrator/specs/cli/: spec.md
openspec/changes/add-kata-workspace-orchestrator/specs/core/: spec.md
openspec/changes/add-kata-workspace-orchestrator/specs/registry/: spec.md
openspec/changes/add-kata-workspace-orchestrator/specs/sessions/: spec.md
openspec/changes/add-kata-workspace-orchestrator/specs/tui/: spec.md
openspec/changes/add-tui-context-menu-and-settings/: design.md  proposal.md  tasks.md
openspec/changes/add-tui-context-menu-and-settings/specs/core/: spec.md
openspec/changes/add-tui-context-menu-and-settings/specs/tui/: spec.md
scripts/: capture_screenshots.py  install.sh  release.sh  setup-tmux.sh  uninstall.sh
tests/: __init__.py  test_cli.py  test_detection.py  test_fzf.py  test_registry.py  test_scanner.py  test_sessions.py  test_templates.py  test_zoxide.py
